tests/snapshots/ui_snapshots__home_screen_render.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 25 },
        content: [
            "┌ PDM ──────────────────┐┌ Home ───────────────────────────────────────────────┐",
            "│Home                   ││Welcome to PDM.                                      │",
            "│Bitcoin Config         ││                                                     │",
            "│Bitcoin Status         ││No config loaded                                     │",
            "│                       ││                                                     │",
            "│                       ││(Navigate to 'Bitcoin Config' to load)               │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "└───────────────────────┘└─────────────────────────────────────────────────────┘",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
            x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
